Tagline smaller font

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -147,7 +147,8 @@ input[type="button"], input[type="submit"] {
       list-style: square;
       font-family: 'courier';
       color: #888;
-      font-size: 0.95em;
+      font-size: 0.8em;
+      font-weight: bold;
       line-height: 1.5em;
       margin-top: 8px;
     }
