Changed pitch and title

--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -13,8 +13,7 @@
       \---
 
     .pitch
-      todo lists with less friction
-
+      todo lists that don't get in your way
 
 -if flash[:login_error]
   #error_wrapper
