--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -143,6 +143,7 @@ input[type="button"], input[type="submit"] {
       }
     }
     .pitch {
+      font-size: 8px;
   //    font-weight: bold;
       list-style: square;
       font-family: 'courier';
