Changed pitch and title again

--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -13,7 +13,7 @@
       \---
 
     .pitch
-      todo lists that don't get in your way
+      friction-free todo lists
 
 -if flash[:login_error]
   #error_wrapper
