--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
 %html(xmlns="http://www.w3.org/1999/xhtml")
   %head
     %title
-      =(@title || "friction-free todo lists") + " - TinkerTask"
+      ="TinkerTask " + (@title || "friction-free todo lists") 
     %meta(http-equiv="X-UA-Compatible" content="chrome=1")
     %meta(name="keywords" content="todo list, todo, to-do list, to-do, task, task manager, organizer")
     %meta(name="description" content="Simple, elegant todo lists.")
